-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Beta
-
None
-
win64, windows 8
-
e5a8134765cdc69ba916416166f4d416137e2ffc
I think the results of https://bugreports.qt-project.org/browse/QTBUG-30373 (definitely could be wrong about this, it was merged in on 2014-09-30 I think)
caused the vcxproj generation to no longer create custom build steps like:
<CustomBuild Include="FILE.hpp"> <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">FILE.hpp;%(AdditionalInputs)</AdditionalInputs> <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Qt\Qt5.4.0_Beta_S\5.4\msvc2013_64\bin\moc.exe ...
in the latest snapshot it simply creates:
<ItemGroup>
<ClInclude Include="FILE.hpp" />
</ItemGroup>
my qmake step is:
"qmake -spec win32-msvc2013 -tp vc -r"
The 5.4-alpha did not show this behaviour.
Snapshot: qt-opensource-windows-x86-msvc2013_64-5.4.0-beta_2014-10-01_10-00-08-30
Update: See attached file for example .pro.
- is required for
-
QTBUG-41077 Issues to be fixed before 5.4.0 beta release
-
- Closed
-
For Gerrit Dashboard: QTBUG-41746 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
96533,3 | fix vcxproj generation for CONFIG-=flat | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
105997,4 | fix vcxproj generation for CONFIG-=flat | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |