qmake/generators/win32/msbuild_objectmodel.cpp
@@ -2656,6 +2656,11 @@ specifier|const
 name|QString
 modifier|&
 name|filter
+parameter_list|,
+specifier|const
+name|QString
+modifier|&
+name|filterId
 parameter_list|)
 block|{
 if|if
@@ -2799,6 +2804,8 @@ argument_list|,
 name|tool
 argument_list|,
 name|tempFilterName
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 else|else
@@ -2821,6 +2828,8 @@ argument_list|,
 name|tool
 argument_list|,
 name|filter
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 block|}
@@ -2882,6 +2891,8 @@ argument_list|,
 name|tool
 argument_list|,
 name|tempFilterName
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 else|else
@@ -2904,6 +2915,8 @@ argument_list|,
 name|tool
 argument_list|,
 name|filter
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 block|}
@@ -2938,6 +2951,8 @@ argument_list|,
 name|info
 argument_list|,
 name|filter
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 name|xmlFilter
@@ -2984,6 +2999,11 @@ specifier|const
 name|QString
 modifier|&
 name|filter
+parameter_list|,
+specifier|const
+name|QString
+modifier|&
+name|filterId
 parameter_list|)
 block|{
 if|if
@@ -3055,6 +3075,8 @@ name|it
 operator|)
 argument_list|,
 name|filter
+argument_list|,
+name|filterId
 argument_list|)
 expr_stmt|;
 block|}
@@ -10874,6 +10896,8 @@ argument_list|,
 name|project
 argument_list|,
 name|filtername
+argument_list|,
+name|filtername
 argument_list|)
 expr_stmt|;
 comment|// output root tree
@@ -10913,6 +10937,11 @@ specifier|const
 name|QString
 modifier|&
 name|filtername
+parameter_list|,
+specifier|const
+name|QString
+modifier|&
+name|filterId
 parameter_list|)
 block|{
 comment|// We need to check if the file has any custom build step.
@@ -10974,7 +11003,7 @@ argument_list|)
 operator|.
 name|filterByName
 argument_list|(
-name|filtername
+name|filterId
 argument_list|)
 expr_stmt|;
 if|if
@@ -11143,7 +11172,7 @@ argument_list|)
 operator|.
 name|filterByName
 argument_list|(
-name|filtername
+name|filterId
 argument_list|)
 decl_stmt|;
 if|if
